Add start/pause button for workout timer and replace reps input with dropdown selector

--- a/index.html
+++ b/index.html
@@ -54,6 +54,9 @@
                     <div class="summary-card">
                         <h3><i class="fas fa-stopwatch"></i> Workout Duration</h3>
                         <p id="workout-timer-display">0m 0s</p>
+                        <button id="start-pause-timer" class="btn primary-btn">
+                            <i class="fas fa-play"></i> Start
+                        </button>
                     </div>
                     
                     <div class="summary-card">
