Add localStorage for data persistence and clear data button

--- a/index.html
+++ b/index.html
@@ -102,6 +102,9 @@
                         <button id="view-calendar" class="btn secondary-btn">
                             <i class="fas fa-calendar"></i> Calendar View
                         </button>
+                        <button id="clear-all-data" class="btn secondary-btn">
+                            <i class="fas fa-trash-alt"></i> Clear All Data
+                        </button>
                     </div>
                 </div>
                 <div id="history-container" class="history-container hidden"></div>
